# c-binaural

./: .gitignore  CMakeLists.txt  README.md  main.c  main.cpp
steamaudio/lib/windows-x86/: phonon.lib
